[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Other/doorOpen.png" type="Texture" id=1]
[ext_resource path="res://assets/Other/doorOpen_top.png" type="Texture" id=2]
[ext_resource path="res://game/rooms/Door.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("doorOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("doorOpen2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("doorOpen_top:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("doorOpen:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -32 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("doorOpen2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -96 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("doorOpen_top:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ), Vector2( 0, -160 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("doorOpen:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("doorOpen2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("doorOpen_top:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("doorOpen_top:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("doorOpen2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("doorOpen:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -32 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 213.333, 112 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.6667, 96 )

[node name="Door" type="Node2D"]
scale = Vector2( 1.5, 1 )
script = ExtResource( 3 )

[node name="doorOpen" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 1 )

[node name="doorOpen2" type="Sprite" parent="."]
position = Vector2( 0, -96 )
texture = ExtResource( 1 )

[node name="doorOpen_top" type="Sprite" parent="."]
position = Vector2( 0, -160 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "reset"
anims/open = SubResource( 1 )
anims/reset = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 0, -112 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 3 )

[node name="DoorCollider" type="Area2D" parent="."]
modulate = Color( 0.705882, 0, 0, 1 )
position = Vector2( 0, -96 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorCollider"]
shape = SubResource( 4 )
disabled = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="DoorCollider" to="." method="_on_DoorCollider_body_entered"]
